[package]
name = "augment-vol-brt-man"
description = "Manages volume and brightness for wlroots-based compositors."
version = "0.1.1-alpha"
repository = "https://github.com/augment-rs/augment-vol-brt-man"
edition = "2021"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
clap = { version = "4.5.4", features = ["derive"] }
gtk = "0.18.1"
gtk-layer-shell = "0.8.0"
serde = { version = "1.0.198", features = ["derive"] }
toml = "0.8.12"
xdg = "2.5.2"
